# rs-nanogpt

./: .gitignore  Cargo.toml  Makefile  README.md
scripts/: bootstrap.sh
src/: checkpoint.rs  lib.rs  main.rs  metrics.rs  test_support.rs
src/data/: download.rs  loader.rs  mod.rs  parquet.rs
src/eval/: loss.rs  mod.rs  sample.rs  tokenizer.rs
src/model/: attention.rs  block.rs  config.rs  device.rs  embedding.rs  flash_attention.rs  gpt.rs  linear.rs  loss.rs  mlp.rs  mod.rs  rms_norm.rs  rope.rs
src/tokenizer/: bpe.rs  mod.rs  shared.rs  trainer.rs
src/train/: mod.rs  optim.rs  schedule.rs  train_loop.rs
tests/fixtures/eval/: code.txt  en.txt  kr.txt
writeups/: bpe-trainer-plan.md  doc-cap-plan.md  tokenid-refactor-plan.md  tokenizer-eval-plan.md
