[package]
name = "rs-nanogpt"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-array = "58.1.0"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
fancy-regex = "0.18.0"
parquet = { version = "58.1.0", default-features = false, features = ["arrow", "zstd"] }
rayon = "1.12.0"
tempfile = "3.27.0"
