[package]
name = "rs-nanogpt"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-array = "58.1.0"
base64 = "0.22.1"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.10.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.10.2" }
clap = { version = "4.6.1", features = ["derive"] }
fancy-regex = "0.18.0"
parquet = { version = "58.1.0", default-features = false, features = ["arrow", "zstd"] }
rand = "0.10.1"
rand_chacha = "0.10.0"
rayon = "1.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.27.0"
ureq = "3.3.0"

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
